--- a/src/ui/styles/global/index.scss
+++ b/src/ui/styles/global/index.scss
@@ -15,6 +15,8 @@ body {
   font-size: 16px; // former 16px
   font-weight: normal;
   height: 100%;
+  overflow: auto;
+
   // Disables out of bounds scrolling and its bounce back effect, may be needed in html tag as well ...
   position: fixed;
   width: 100%;
