--- a/src/ui/views/consumer/businessDetails/businessDetails.scss
+++ b/src/ui/views/consumer/businessDetails/businessDetails.scss
@@ -35,7 +35,9 @@
 }
 .profile-page {
   background: #fff;
+  height: 100%;
   min-height: 100%;
+  overflow: auto;
   position: relative;
 
   &__close {
